--- a/about styles.css
+++ b/about styles.css
@@ -1,20 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap");
 
 :root {
-  --yellow: #f5bf23;
-  --black: #111;
-  --white: #fff;
-  --light-color: #666;
-  --light-bg: #eee;
-  --box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
-  --border: .1rem solid rgba(0,0,0,.3);
+  --yellow:#f5bf23;
+  --black:#111;
+  --white:#fff;
+  --light-color:#666;
+  --light-bg:#eee;
+  --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
+  --border:.1rem solid rgba(0,0,0,.3);
 }
 
 * {
   font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   outline: none;
   border: none;
   text-decoration: none;
@@ -39,25 +40,69 @@ html::-webkit-scrollbar-thumb {
   background: var(--yellow);
 }
 
-body {
-  font-family: 'Poppins', sans-serif;
-  line-height: 1.6;
-  margin: 0;
-  padding: 0;
-  background-color: var(--white);
+section {
+  padding: 5rem 10%;
+}
+
+.heading {
+  margin-bottom: 3rem;
+  font-size: 3rem;
+  color: var(--black);
+  text-transform: capitalize;
+  padding-left: 1rem;
+  border-left: 1rem solid var(--yellow);
+}
+
+.btn {
+  display: inline-block;
+  margin-top: 1rem;
+  padding: 1rem 3rem;
+  background: var(--black);
+  color: var(--white);
+  cursor: pointer;
+  font-size: 1.7rem;
+  text-transform: capitalize;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+
+.btn:hover {
+  background: var(--yellow);
   color: var(--black);
 }
 
+@-webkit-keyframes fadeIn {
+  0% {
+    top: 50%;
+    opacity: 0;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    top: 50%;
+    opacity: 0;
+  }
+}
+
 .header {
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   left: 0;
   right: 0;
-  box-shadow: var(--box-shadow);
+  -webkit-box-shadow: var(--box-shadow);
+          box-shadow: var(--box-shadow);
   padding: 1.5rem 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   z-index: 1000;
   background: var(--white);
 }
@@ -108,18 +153,25 @@ body {
   position: absolute;
   top: 120%;
   left: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
   width: 70rem;
   background: var(--white);
-  box-shadow: var(--box-shadow);
+  -webkit-box-shadow: var(--box-shadow);
+          box-shadow: var(--box-shadow);
   padding: 1rem;
   display: none;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 1rem;
-  animation: fadeIn .2s linear;
+  -webkit-animation: fadeIn .2s linear;
+          animation: fadeIn .2s linear;
 }
 
 .header .search-form.active {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -146,13 +198,16 @@ body {
   position: absolute;
   top: 120%;
   left: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
   width: 40rem;
   background: var(--white);
-  box-shadow: var(--box-shadow);
+  -webkit-box-shadow: var(--box-shadow);
+          box-shadow: var(--box-shadow);
   padding: 2rem;
   text-align: center;
-  animation: fadeIn .2s linear;
+  -webkit-animation: fadeIn .2s linear;
+          animation: fadeIn .2s linear;
   display: none;
 }
 
@@ -163,8 +218,9 @@ body {
 .header .login-form h3 {
   font-size: 2.5rem;
   color: var(--black);
-  text-transform: uppercase;
+  text-transform: capitalize;
   padding-bottom: 1rem;
+  text-transform: uppercase;
 }
 
 .header .login-form .box {
@@ -177,8 +233,12 @@ body {
 }
 
 .header .login-form .flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: .5rem;
   padding-top: 1.5rem;
   padding-bottom: 1rem;
@@ -235,7 +295,8 @@ body {
 }
 
 .contact-info.active {
-  box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.7);
+  -webkit-box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.7);
+          box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.7);
   display: block;
 }
 
@@ -249,7 +310,8 @@ body {
 }
 
 .contact-info #close-contact-info:hover {
-  transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
 .contact-info .info {
@@ -308,7 +370,6 @@ body {
   background: var(--black);
   color: var(--white);
 }
-
 /* About Section */
 .about {
   padding: 60px;
