--- a/blogs styles.css
+++ b/blogs styles.css
@@ -384,9 +384,27 @@ section {
   font-size: 1.5rem; /* Reduced from 2rem */
 }
 
+/* General Blog Styles */
+.blog {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 0;
+  background-color: ghostwhite;
+}
+
+/* Blog Heading Styles */
 .blog-heading {
   text-align: center;
-  margin-bottom: 3rem;
+  margin-bottom: 3rem; /* Adjusted margin */
+}
+
+.blog-heading strong {
+  font-size: 1.2rem;
+  color: var(--light-color);
+  font-weight: 500;
+  margin-bottom: 10px;
 }
 
 .blog-heading h3 {
@@ -396,25 +414,77 @@ section {
   margin-bottom: 1rem;
 }
 
+/* Blog Box Container */
+.blog-box-container {
+  display: table-row-group;
+  grid-template-rows: repeat(3, 1fr);
+  max-width: 1050px;
+  width: 90%;
+  margin-top: 50px;
+  grid-gap: 20px;
+}
+
+/* Blog Box Styles */
 .blog-box {
   background: var(--white);
-  box-shadow: var(--box-shadow);
+  box-shadow: var(--light-bg);
   border-radius: .5rem;
   margin-bottom: 2rem;
   overflow: hidden;
-  transition: box-shadow .3s ease-in-out;
+  transition: all ease 0.2s;
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5), 0 6px 20px rgba(0, 0, 0, 0.5);
 }
 
 .blog-box:hover {
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+  background-color: grey;
+  box-shadow: 10px 20px 50px rgba(0, 0, 0, 0.15);
+}
+
+/* Blog Box Image Styles */
+.blog-box-img {
+  width: 100%;
+  height: auto;
+  max-height: 100%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative; /* Add this */
 }
 
 .blog-box img {
   width: 100%;
   height: 15rem;
   object-fit: cover;
+  object-position: center;
+  transition: all ease 0.2s;
 }
 
+.blog-img-link {
+  position: relative;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: none; /* Add this */
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  color: black;
+  box-shadow: 2px 2px 30px rgba(20, 97, 212, 0.15);
+  animation: fade 0.2s;
+}
+
+/* Blog Box Text Styles */
 .blog-box-text {
   padding: 2rem;
 }
@@ -438,6 +508,7 @@ section {
   color: var(--light-color);
 }
 
+/* Responsive Styles */
 @media (max-width: 768px) {
   .blog-heading h3 {
     font-size: 2.5rem;
