--- a/pricing styles.css
+++ b/pricing styles.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap");
 
 :root {
-  --yellow:#f5bf23;
-  --black:#111;
-  --white:#fff;
-  --light-color:#666;
-  --light-bg:#eee;
-  --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
-  --border:.1rem solid rgba(0,0,0,.3);
+  --yellow: #f5bf23;
+  --black: #111;
+  --white: #fff;
+  --light-color: #666;
+  --light-bg: #eee;
+  --box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+  --border: .1rem solid rgba(0, 0, 0, .3);
 }
 
 * {
@@ -69,774 +69,186 @@ section {
   color: var(--black);
 }
 
-@keyframes fadeIn {
-  0% {
-    top: 50%;
-    opacity: 0;
-  }
-}
-
-.header {
-  position: sticky;
-  top: 0;
-  left: 0;
-  right: 0;
-  box-shadow: var(--box-shadow);
-  padding: 1.5rem 10%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  z-index: 1000;
-  background: var(--white);
-}
-
-.header .logo {
-  font-size: 2.5rem;
-  color: var(--black);
-  text-transform: capitalize;
-}
-
-.header .logo span {
-  color: var(--yellow);
-}
-
-.header .navbar a {
-  font-size: 2rem;
-  color: var(--black);
-  text-transform: capitalize;
-  margin: 0 1rem;
-}
-
-.header .navbar a:hover {
-  color: var(--yellow);
-}
-
-.header .icons div {
-  height: 5rem;
-  width: 5rem;
-  line-height: 5rem;
-  font-size: 2rem;
+.pricing {
   background: var(--light-bg);
-  color: var(--black);
-  cursor: pointer;
-  text-align: center;
-  margin-left: .3rem;
-}
-
-.header .icons div:hover {
-  background: var(--black);
-  color: var(--white);
-}
-
-.header #menu-btn {
-  display: none;
-}
-
-.header .search-form {
-  position: absolute;
-  top: 120%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 70rem;
-  background: var(--white);
-  box-shadow: var(--box-shadow);
-  padding: 1rem;
-  display: none;
-  align-items: center;
-  gap: 1rem;
-  animation: fadeIn .2s linear;
-}
-
-.header .search-form.active {
-  display: flex;
-}
-
-.header .search-form input {
-  width: 100%;
-  padding: 1.2rem 1.4rem;
-  background: var(--light-bg);
-  font-size: 1.6rem;
-  color: var(--light-color);
-}
-
-.header .search-form label {
-  font-size: 2.5rem;
-  color: var(--black);
-  cursor: pointer;
-  margin: 0 1rem;
-}
-
-.header .search-form label:hover {
-  color: var(--yellow);
-}
-
-.header .login-form {
-  position: absolute;
-  top: 120%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 40rem;
-  background: var(--white);
-  box-shadow: var(--box-shadow);
-  padding: 2rem;
-  text-align: center;
-  animation: fadeIn .2s linear;
-  display: none;
-}
-
-.header .login-form.active {
-  display: block;
-}
-
-.header .login-form h3 {
-  font-size: 2.5rem;
-  color: var(--black);
-  text-transform: uppercase;
-  padding-bottom: 1rem;
-}
-
-.header .login-form .box {
-  width: 100%;
-  padding: 1.2rem 1.4rem;
-  background: var(--light-bg);
-  font-size: 1.6rem;
-  color: var(--light-color);
-  margin: .7rem 0;
-}
-
-.header .login-form .flex {
-  display: flex;
-  align-items: center;
-  gap: .5rem;
-  padding-top: 1.5rem;
-  padding-bottom: 1rem;
-}
-
-.header .login-form .flex label {
-  font-size: 1.5rem;
-  color: var(--light-color);
-  cursor: pointer;
-}
-
-.header .login-form .flex a {
-  font-size: 1.5rem;
-  color: var(--light-color);
-  margin-left: auto;
-}
-
-.header .login-form .flex a:hover {
-  color: var(--yellow);
-  text-decoration: underline;
-}
-
-.header .login-form .btn {
-  width: 100%;
-}
-
-.header .login-form p {
-  font-size: 1.5rem;
-  color: var(--light-color);
-  line-height: 2;
-  padding-top: 1.5rem;
-}
-
-.header .login-form p a {
-  color: var(--yellow);
-}
-
-.header .login-form p a:hover {
-  text-decoration: underline;
-}
-
-.contact-info {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 35rem;
-  background: var(--white);
-  height: 100%;
-  text-align: center;
-  z-index: 1100;
-  padding: 0 2rem;
-  padding-top: 5rem;
-  display: none;
-}
-
-.contact-info.active {
-  box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.7);
-  display: block;
-}
-
-.contact-info #close-contact-info {
-  position: absolute;
-  top: 1rem;
-  right: 1.5rem;
-  cursor: pointer;
-  font-size: 4rem;
-  color: var(--black);
-}
-
-.contact-info #close-contact-info:hover {
-  transform: rotate(90deg);
-}
-
-.contact-info .info {
-  padding: 2rem 0;
-}
-
-.contact-info .info i {
-  height: 5rem;
-  width: 5rem;
-  line-height: 5rem;
-  font-size: 2rem;
-  background: var(--light-bg);
-  color: var(--black);
-  cursor: pointer;
-  text-align: center;
-  margin-bottom: .5rem;
-}
-
-.contact-info .info i:hover {
-  background: var(--black);
-  color: var(--white);
-}
-
-.contact-info .info h3 {
-  font-size: 2rem;
-  color: var(--black);
-  text-transform: capitalize;
-  padding: 1rem 0;
-}
-
-.contact-info .info p {
-  font-size: 1.5rem;
-  color: var(--light-color);
-  line-height: 2;
-}
-
-.contact-info .share {
-  padding-top: 2rem;
-  border-top: var(--border);
-  margin-top: 1rem;
-}
-
-.contact-info .share a {
-  height: 5rem;
-  width: 5rem;
-  line-height: 5rem;
-  font-size: 2rem;
-  background: var(--light-bg);
-  color: var(--black);
-  cursor: pointer;
-  text-align: center;
-  margin: 0 .3rem;
-}
-
-.contact-info .share a:hover {
-  background: var(--black);
-  color: var(--white);
-}
-
-.home {
-  padding: 0;
-}
-
-.home .slide {
-  min-height: 60rem;
-  display: flex;
-  align-items: center;
-  position: relative;
-  background-size: cover !important;
-  background-position: center !important;
-}
-
-.home .slide::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(90deg, var(--white), transparent);
-}
-
-.home .slide .content {
-  width: 50rem;
-  position: relative;
-}
-
-.home .slide .content h3 {
-  font-size: 6rem;
-  color: var(--black);
-  text-transform: uppercase;
-}
-
-.home .slide .content p {
-  font-size: 1.4rem;
-  color: var(--light-color);
-  line-height: 2;
-  padding: 1rem 0;
-}
-
-.home .swiper-button-next,
-.home .swiper-button-prev {
-  background: var(--black);
-  height: 6rem;
-  width: 6rem;
-  line-height: 6rem;
-  font-size: 2rem;
-  color: var(--white);
-}
-
-.services .box-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
-  gap: 1.5rem;
-}
-
-.services .box-container .box {
-  padding: 2rem;
-  background: var(--white);
-  border: var(--border);
-  box-shadow: var(--box-shadow);
-  text-align: center;
-}
-
-.services .box-container .box img {
-  margin: 1rem 0;
-  height: 20rem;
-}
-
-.services .box-container .box h3 {
-  font-size: 2rem;
-  color: var(--black);
-}
-
-.services .box-container .box p {
-  font-size: 1.5rem;
-  color: var(--light-color);
-  line-height: 2;
-  padding: 1rem 0;
-}
-
-.about .row {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-  align-items: center;
-}
-
-.about .row .image {
-  flex: 1 1 45rem;
-}
-
-.about .row .image img {
-  height: auto;
-  width: 100%;
-}
-
-.about .row .content {
-  flex: 1 1 45rem;
-}
-
-.about .row .content h3 {
-  font-size: 4rem;
-  color: var(--black);
-}
-
-.about .row .content p {
-  font-size: 1.5rem;
-  color: var(--light-color);
-  line-height: 2;
-  padding: 1rem 0;
-}
-
-.menu .box-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
-  gap: 1.5rem;
-}
-
-.menu .box-container .box {
-  border: var(--border);
-  box-shadow: var(--box-shadow);
-  background: var(--white);
-  padding: 2rem;
-}
-
-.menu .box-container .box img {
-  height: 20rem;
-  margin: 1rem 0;
-}
-
-.menu .box-container .box h3 {
-  color: var(--black);
-  font-size: 2rem;
-}
-
-.menu .box-container .box p {
-  padding: 1rem 0;
-  font-size: 1.5rem;
-  color: var(--light-color);
-  line-height: 2;
-}
-
-.menu .box-container .box .stars i {
-  font-size: 1.3rem;
-  color: var(--yellow);
-}
-
-.menu .box-container .box .price {
-  font-size: 2.5rem;
-  color: var(--black);
-  padding-top: .5rem;
-}
-
-.products .swiper-slide {
-  width: 30rem;
-}
-
-.products .swiper-slide img {
-  height: 25rem;
-}
-
-.products .swiper-slide h3 {
-  font-size: 2rem;
-  color: var(--black);
-  text-align: center;
-  padding: 1rem 0;
-}
-
-.products .swiper-slide .price {
-  font-size: 2.5rem;
-  color: var(--black);
-  text-align: center;
-}
-
-.contact .row {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-  align-items: center;
-}
-
-.contact .row .image {
-  flex: 1 1 45rem;
-}
-
-.contact .row .image img {
-  height: auto;
-  width: 100%;
-}
-
-.contact .row form {
-  flex: 1 1 45rem;
-  padding: 2rem;
-  box-shadow: var(--box-shadow);
-  background: var(--white);
-  border: var(--border);
-}
-
-.contact .row form .inputBox {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-}
-
-.contact .row form .inputBox input,
-.contact .row form .inputBox textarea {
-  width: 49%;
-  background: var(--light-bg);
-  padding: 1.2rem 1.4rem;
-  font-size: 1.6rem;
-  color: var(--black);
-  margin: .7rem 0;
-}
-
-.contact .row form .inputBox textarea {
-  width: 100%;
-  height: 20rem;
-  resize: none;
-}
-
-.contact .row form .btn {
-  width: 100%;
 }
 
 .pricing .box-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-  gap: 1.5rem;
+  gap: 2rem;
 }
 
-.pricing .box-container .box {
+.pricing .box {
   background: var(--white);
+  text-align: center;
+  padding: 2rem;
   border: var(--border);
   box-shadow: var(--box-shadow);
-  padding: 2rem;
-  text-align: center;
-  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
 }
 
-.pricing .box-container .box .plan {
-  font-size: 2.5rem;
-  color: var(--black);
-  text-transform: uppercase;
-  background: var(--light-bg);
-  padding: .5rem 1rem;
-}
-
-.pricing .box-container .box .price {
-  font-size: 3.5rem;
-  color: var(--black);
-  padding: 1rem 0;
-}
-
-.pricing .box-container .box .list {
-  padding: 1rem 0;
-  line-height: 2;
-}
-
-.pricing .box-container .box .list p {
-  font-size: 1.5rem;
-  color: var(--light-color);
-}
-
-.pricing .box-container .box .btn {
-  margin-top: 1rem;
-  width: 100%;
-}
-
-.review .box-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-  gap: 1.5rem;
-}
-
-.review .box-container .box {
-  background: var(--white);
-  border: var(--border);
-  box-shadow: var(--box-shadow);
-  padding: 2rem;
-  text-align: center;
-}
-
-.review .box-container .box img {
-  height: 10rem;
-  width: 10rem;
+.pricing .box i {
+  font-size: 3rem;
+  height: 7rem;
+  width: 7rem;
+  line-height: 7rem;
   border-radius: 50%;
-  object-fit: cover;
-  margin: 1rem 0;
-}
-
-.review .box-container .box h3 {
-  font-size: 2rem;
+  margin-bottom: 2rem;
+  background: var(--yellow);
   color: var(--black);
 }
 
-.review .box-container .box p {
+.pricing .box h3 {
+  font-size: 2rem;
+  color: var(--black);
+  text-transform: capitalize;
+  font-weight: normal;
+}
+
+.pricing .box .price {
   padding: 1rem 0;
-  font-size: 1.5rem;
+  font-size: 5rem;
+  color: var(--black);
+  text-transform: capitalize;
+}
+
+.pricing .box .price span {
+  font-size: 2rem;
+}
+
+.pricing .box .list {
+  padding: 1rem 0;
+  flex-grow: 1;
+}
+
+.pricing .box .list p {
+  padding: 1rem 0;
+  font-size: 1.4rem;
   color: var(--light-color);
   line-height: 2;
 }
 
-.review .box-container .box .stars i {
-  font-size: 1.7rem;
-  color: var(--yellow);
-}
-
-.blog .box-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-  gap: 1.5rem;
-}
-
-.blog .box-container .box {
-  background: var(--white);
-  border: var(--border);
-  box-shadow: var(--box-shadow);
-  padding: 2rem;
-}
-
-.blog .box-container .box .image {
-  height: 20rem;
-  width: 100%;
-  object-fit: cover;
-  margin: 1rem 0;
-}
-
-.blog .box-container .box:hover img {
-  transform: scale(1.1);
-}
-
-.blog .box-container .box h3 {
-  font-size: 2rem;
-  color: var(--black);
-}
-
-.blog .box-container .box p {
-  padding: 1rem 0;
-  font-size: 1.5rem;
-  color: var(--light-color);
-  line-height: 2;
-}
-
-.blog .box-container .box span {
-  font-size: 1.5rem;
-  color: var(--light-color);
+.pricing .box .btn {
+  margin-top: auto;
 }
 
 .footer {
   background: var(--black);
-}
-
-.footer .box-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
-  gap: 1.5rem;
-}
-
-.footer .box-container .box h3 {
   color: var(--white);
-  font-size: 2.2rem;
-  padding: 1rem 0;
+  padding: 30px;
+  text-align: center;
+  border-top: 2px solid var(--light-color);
 }
 
-.footer .box-container .box a {
-  display: block;
-  font-size: 1.5rem;
-  color: var(--light-color);
-  padding: 1rem 0;
+.footer .logo {
+  color: var(--white);
+  font-size: 2.4rem;
+  text-decoration: none;
+  transition: color 0.3s ease;
 }
 
-.footer .box-container .box a i {
-  color: var(--yellow);
-  padding-right: .5rem;
+.footer .logo:hover {
+  color: var(--black);
 }
 
-.footer .box-container .box a:hover i {
-  padding-right: 2rem;
+.footer .links a {
+  color: var(--white);
+  text-decoration: none;
+  font-size: 2rem;
+  margin: 0 1.5rem;
+  transition: color 0.3s ease;
+}
+
+.footer .links a:hover {
+  color: var(--black);
 }
 
 .footer .credit {
-  text-align: center;
-  border-top: var(--border);
-  margin-top: 2rem;
-  padding: 2rem;
-  font-size: 2rem;
+  margin-top: 20px;
+  font-size: 1.4rem;
+  color: #ffffff;
+  transition: color 0.3s ease;
+}
+
+.footer .credit .developer-info a {
+  color: var(--yellow);
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.footer .credit .developer-info a:hover {
   color: var(--white);
 }
 
-.footer .credit span {
-  color: var(--yellow);
+.footer .credit .orignal {
+  margin-top: 10px;
 }
 
-@media (max-width:991px) {
+@media (max-width: 1200px) {
+  .header {
+    padding: 1.5rem 2rem;
+  }
+  section {
+    padding: 3rem 5%;
+  }
+}
+
+@media (max-width: 991px) {
   html {
     font-size: 55%;
   }
-
-  .header {
-    padding: 2rem;
-  }
-
   section {
     padding: 3rem 2rem;
   }
-
-  .contact-info {
-    width: 100%;
+  .header #menu-btn {
+    display: inline-block;
+  }
+  .header .navbar {
+    position: absolute;
+    top: 99%;
+    left: 0;
+    right: 0;
+    background: var(--white);
+    border-top: var(--border);
+    border-bottom: var(--border);
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    transition: .2s linear;
+  }
+  .header .navbar.active {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  }
+  .header .navbar a {
+    display: block;
+    margin: 2rem;
   }
 }
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
   .header .search-form {
     width: 90%;
   }
-
   .header .login-form {
     width: 90%;
   }
-
+  .home .slide {
+    justify-content: center;
+  }
+  .home .slide .content {
+    text-align: center;
+  }
   .home .slide .content h3 {
-    font-size: 5rem;
-  }
-
-  .home .slide .content p {
-    font-size: 1.5rem;
-  }
-
-  .home .slide .content .btn {
-    font-size: 1.5rem;
-  }
-
-  .about .row {
-    flex-direction: column;
-  }
-
-  .about .row .image {
-    height: 30rem;
-  }
-
-  .about .row .content {
-    height: auto;
-  }
-
-  .contact .row {
-    flex-direction: column;
-  }
-
-  .contact .row .image {
-    height: 30rem;
-  }
-
-  .contact .row form {
-    height: auto;
-  }
-
-  .footer .box-container {
-    grid-template-columns: 1fr;
+    font-size: 3rem;
   }
 }
 
-@media (max-width:450px) {
+@media (max-width: 450px) {
   html {
     font-size: 50%;
   }
-
-  .heading {
+  .about .row .content h3 {
     font-size: 2.5rem;
   }
-
-  .header .search-form {
-    width: 100%;
-  }
-
-  .header .login-form {
-    width: 100%;
-  }
-
-  .home .slide .content h3 {
-    font-size: 3.5rem;
-  }
-
-  .home .slide .content p {
-    font-size: 1.4rem;
-  }
-
-  .home .slide .content .btn {
-    font-size: 1.4rem;
-  }
-
-  .swiper-pagination-bullet {
-    height: 1rem;
-    width: 1rem;
-    font-size: 1rem;
-  }
 }
-  
