--- a/style.css
+++ b/style.css
@@ -763,6 +763,11 @@ section {
   line-height: 2;
 }
 
+.pricing .box-container .box .btn {
+  margin-top: auto;
+  align-self: center; 
+}
+
 .contact {
   background: var(--black);
 }
