--- a/pricing styles.css
+++ b/pricing styles.css
@@ -74,12 +74,12 @@ section {
 }
 
 .pricing .box-container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   gap: 2rem;
 }
 
-.pricing .box-container .box {
+.pricing .box {
   background: var(--white);
   text-align: center;
   padding: 2rem;
@@ -88,16 +88,51 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  flex: 1 1 30rem; /* Flex-grow, flex-shrink, and flex-basis */
 }
 
-.pricing .box-container .box .content {
-  flex-grow: 1; /* Makes the content area flexible */
+.pricing .box i {
+  font-size: 3rem;
+  height: 7rem;
+  width: 7rem;
+  line-height: 7rem;
+  border-radius: 50%;
+  margin-bottom: 2rem;
+  background: var(--yellow);
+  color: var(--black);
 }
 
-.pricing .box-container .box .btn {
-  margin-top: auto; /* Pushes the button to the bottom */
-  align-self: center; /* Centers the button horizontally */
+.pricing .box h3 {
+  font-size: 2rem;
+  color: var(--black);
+  text-transform: capitalize;
+  font-weight: normal;
+}
+
+.pricing .box .price {
+  padding: 1rem 0;
+  font-size: 5rem;
+  color: var(--black);
+  text-transform: capitalize;
+}
+
+.pricing .box .price span {
+  font-size: 2rem;
+}
+
+.pricing .box .list {
+  padding: 1rem 0;
+  flex-grow: 1;
+}
+
+.pricing .box .list p {
+  padding: 1rem 0;
+  font-size: 1.4rem;
+  color: var(--light-color);
+  line-height: 2;
+}
+
+.pricing .box .btn {
+  margin-top: auto;
 }
 
 .footer {
