--- a/style.css
+++ b/style.css
@@ -707,23 +707,23 @@ section {
 }
 
 .pricing .box-container {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(30rem, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   gap: 2rem;
 }
 
-.pricing .box-container .box {
+.pricing .box {
   background: var(--white);
   text-align: center;
   padding: 2rem;
   border: var(--border);
-  -webkit-box-shadow: var(--box-shadow);
-          box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.pricing .box-container .box i {
+.pricing .box i {
   font-size: 3rem;
   height: 7rem;
   width: 7rem;
@@ -734,39 +734,41 @@ section {
   color: var(--black);
 }
 
-.pricing .box-container .box h3 {
+.pricing .box h3 {
   font-size: 2rem;
   color: var(--black);
   text-transform: capitalize;
   font-weight: normal;
 }
 
-.pricing .box-container .box .price {
+.pricing .box .price {
   padding: 1rem 0;
   font-size: 5rem;
   color: var(--black);
   text-transform: capitalize;
 }
 
-.pricing .box-container .box .price span {
+.pricing .box .price span {
   font-size: 2rem;
 }
 
-.pricing .box-container .box .list {
+.pricing .box .list {
   padding: 1rem 0;
+  flex-grow: 1;
 }
 
-.pricing .box-container .box .list p {
+.pricing .box .list p {
   padding: 1rem 0;
   font-size: 1.4rem;
   color: var(--light-color);
   line-height: 2;
 }
 
-.pricing .box-container .box .btn {
+.pricing .box .btn {
   margin-top: auto;
-  align-self: center; 
+  align-self: center;
 }
+
 
 .contact {
   background: var(--black);
